Ensure Profile Picture Has No Overlap Outside The Div

--- a/public/css/client_dash.css
+++ b/public/css/client_dash.css
@@ -77,9 +77,11 @@ body {
     font-weight: 500;
 }
 
-.lead-avatar {
+.lead-avatar img {
     width: 40px;
     height: 40px;
+    object-fit: cover;
+    object-position: bottom;
     border-radius: 50%;
     background-color: #e0e7ff;
     color: var(--primary-dark);
@@ -119,12 +121,12 @@ body {
     font-weight: 600;
 }
 
-.img-center{
+.img-center {
     display: flex;
     justify-content: center;
 }
 
-.avatar {
+.img-center .avatar {
     width: 100px;
     height: 100px;
     border-radius: 50%;
@@ -146,6 +148,7 @@ body {
     background-color: var(--primary-dark);
     border-color: var(--primary-dark);
 }
+
 /* Team Members Page */
 .avatar {
     width: 36px;
